Add basic reader UI skeleton
